backgr, btn img fixed, slider aligned

--- a/src/styles/_process-card.scss
+++ b/src/styles/_process-card.scss
@@ -33,7 +33,7 @@
     &::before {
       display: inline-block;
       content: "";
-      background-image: url(/images/learn-more/Vector.svg);
+      background-image: url(../images/learn-more/Vector.svg);
       background-color: $blue;
       border-radius: 50%;
       width: 40px;
