--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -4,7 +4,11 @@
 }
 
 body {
-  padding: 0;
+  overflow-x: hidden;
+  background-color: $light-grey;
+  color: $text-color;
+  font-family: "Open Sans", sans-serif;
+  font-size: 13px;
 }
 
 a {
