--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -3,7 +3,7 @@ $blue: #2060f6;
 $white: #fff;
 $orange: #ff9c8e;
 $black: #2c2c2c;
-$light-grey: #e5e5e5;
+$light-grey: #f2f6fa;
 $titles-color: #253757;
 $text-color: #6c788b;
 $subtitle-color: #c0cdd7;
